--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>com.example.stardew.bombers.GameApp</mainClass>
+                    <mainClass>com.stardewbombers.client.SimpleMapViewer</mainClass>
                 </configuration>
             </plugin>
 
