--- a/pom.xml
+++ b/pom.xml
@@ -39,11 +39,6 @@
                     <groupId>com.github.AlmasB</groupId>
                     <artifactId>fxgl-samples</artifactId>
                 </exclusion>
-                <!-- 也可以排除所有可能引起问题的依赖 -->
-                <exclusion>
-                    <groupId>*</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
             </exclusions>
         </dependency>
 
@@ -92,6 +87,13 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
+        </dependency>
+
+        <!-- Jackson JSON处理库 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.2</version>
         </dependency>
     </dependencies>
 
